# task-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  sample2.yaml
.github/workflows/: ci.yml  publish.yml
cli/: Cargo.toml
cli/src/: commands.rs  examples.rs  main.rs
core/: Cargo.toml
core/src/: lib.rs  task.rs  workflow.rs
rust_task_core/: Cargo.toml
rust_task_core/src/: main.rs  task.rs  workflow.rs
rust_task_macros/: Cargo.toml
