[package]
name = "task"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.15", features = ["derive", "cargo", "wrap_help", "string"] }
anyhow = "1.0.65"
log = "0.4.17"
simple_logger = "2.3.0"
core = { path = "../core" }