[package]
name = "core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cmd_lib = "1.3.0"
serde = { version = "1.0", features = ["derive"] }
yaml-rust = "0.4.5"
syn = "1.0.102"
proc-macro2 = "1.0.46"
snailquote = "0.3.1"
quote = "1.0.21"
serde_yaml = "0.9.13"
anyhow = "1.0.65"
log = "0.4.17"
simple_logger = "2.3.0"