[package]
name = "rust_task_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cmd_lib = "1.3.0"
serde = "1.0"
yaml-rust = "0.4.5"
syn = "1.0.102"
proc-macro2 = "1.0.46"
snailquote = "0.3.1"
quote = "1.0.21"
serde_yaml = "0.9.13"
